apps/stonegarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stonegarden
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 3000
  selector:
    app: stonegarden
