apps/stonegarden/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-arr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stonegarden.dev`)
      kind: Rule
      services:
        - name: stonegarden
          port: web
  tls:
    certResolver: letsencrypt
